# ==============================================
# pyproject.toml for packaging aegisgraph as a Python module
# Author: Daniel Ferreto
# Version: 1.0.1
# Date: 2025-03-27
# Description:
#     Secure, high-performance C++ graph processing module
#     exposed to Python using pybind11 and built via scikit-build-core.
# ==============================================

[build-system]
requires = [
  "scikit-build-core>=0.8.0",
  "cibuildwheel>=2.23.2", 
  "setuptools>=68.0.0", 
  "wheel>=0.41.0",
  "ninja",
  "pybind11>=2.11.1",
  "cmake>=3.25.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "aegisgraph"
version = "1.0.1"
description = "High-performance graph processing and random walk library in C++ with Python bindings"
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
keywords = ["graph", "cpp", "pybind11", "network", "random walk", "high-performance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[[project.authors]]
name = 'Daniel Ferreto'
email = 'ldanielfch@gmail.com'

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",  
    "coverage>=7.0"
]

[tool.scikit-build]
wheel.packages = ["aegisgraph"]
build-dir = "build-cmake"
wheel.py-api = "cp312"
wheel.expand-macos-universal-tags = true

[project.urls]
"Homepage" = "https://github.com/TheRadDani/aegisgraph"
Documentation = "https://github.com/TheRadDani/aegisgraph/wiki"
"Issues" = "https://github.com/TheRadDani/aegisgraph/issues"
Changelog = "https://github.com/TheRadDani/aegisgraph/releases"
"Source Code" = 'https://github.com/TheRadDani/aegisgraph'

[tool.scikit-build.cmake]
args = [
  "--fresh",
  #"-DPYBIND11_FINDPYTHON=ON",
  "-G", "Ninja",
  "--no-warn-unused-cli"
]
define = { "ABSL_NO_INT128" = "ON", "ABSEIL_BUILD_TESTING" = false, "ABSL_PROPAGATE_CXX_STD" = true, "Python3_ROOT_DIR" = "{python}" }


[tool.scikit-build.sdist]
include = [
    "third_party/*",
    "src/*",
    "include/*",
    "bindings/*",
    "CMakeLists.txt",
    "asan_options.cfg",
    "pyproject.toml",
    "README.md"
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
test-skip = "*-musllinux* *-win32 *-manylinux_i686"
test-command = "pytest {project}/tests"
test-requires = ["pytest", "pytest-cov"]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"


[tool.cibuildwheel.linux]
archs = ["x86_64", "i686"]
manylinux-x86_64-image = "quay.io/pypa/manylinux2014_x86_64"
manylinux-i686-image = "quay.io/pypa/manylinux2014_i686"
before-all = """
yum install -y libatomic python3-devel && \
ln -sf /opt/python/cp310-cp310/bin/python3.10 /usr/bin/python3
"""

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
macos-deployment-target = "10.15"

[tool.cibuildwheel.environment]
CMAKE_BUILD_PARALLEL_LEVEL = "4"
SKBUILD_CMAKE_ARGS = "-DCMAKE_CXX_FLAGS=-mavx2 -mfma -mbmi2 -Wno-deprecated-declarations -DPYTHON_EXECUTABLE={python}"
CIBW_BEFORE_BUILD = "pip install pybind11"
CIBW_REPAIR_WHEEL_COMMAND = "auditwheel repair -w {dest_dir} {wheel}"
CIBW_BUILD_VERBOSITY = 3

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
#addopts = "--verbose --cov=aegisgraph --cov-report=term-missing"
python_files = "test_*.py"